Fix some vertical spacing

--- a/src/assets/scss/templates/_archive-product.scss
+++ b/src/assets/scss/templates/_archive-product.scss
@@ -69,6 +69,12 @@
 			
 		}
 		
+		.wcpf-checkbox-label {
+			
+			margin-bottom: 5px;
+			
+		}
+		
 		.wcpf-title-container {
 			
 			font-size: 0.8rem;
@@ -78,8 +84,6 @@
 			user-select: none;
 			top: 0px;
 			position: relative;
-			
-			margin-bottom: 5px;
 			
 			span {
 				font-family: inherit;
